syntax = "proto3";

package account_grpc;
option go_package = "account_grpc;account_grpc";

service AccountService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message CreateUserRequest {
    string email = 1;
    string password = 2;
}

message GetUserRequest {
    string id = 1;
}

message CreateUserResponse {
    string ok = 1;
}

message GetUserResponse {
    string email = 1;
}
